Add production deployment configuration and documentation, enhance frontend SEO, and refine admin UI components.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,39 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>app</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="tr">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/assets/logo.jpeg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yumobag
+  </title>
+  <meta name="description"
+    content="Yumobag ile tarzınızı yansıtın. En trend çanta modelleri, kaliteli tasarımlar ve şık aksesuarlar Yumobag'da. Hemen keşfedin!" />
+  <meta name="keywords"
+    content="yumobag, çanta, kadın çanta, omuz çantası, sırt çantası, cüzdan, moda, aksesuar, trend çanta" />
+  <meta name="author" content="Yumobag" />
+  <meta name="theme-color" content="#000000" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yumobag.net/" />
+  <meta property="og:title" content="Yumobag - Tarzını Tamamla" />
+  <meta property="og:description"
+    content="En şık çanta modelleri ve aksesuarlar Yumobag'da. Yeni sezon ürünlerini incelemek için tıklayın." />
+  <meta property="og:image" content="/assets/logo.jpeg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://yumobag.net/" />
+  <meta property="twitter:title" content="Yumobag - Tarzını Tamamla" />
+  <meta property="twitter:description"
+    content="En şık çanta modelleri ve aksesuarlar Yumobag'da. Yeni sezon ürünlerini incelemek için tıklayın." />
+  <meta property="twitter:image" content="/assets/logo.jpeg" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
